--- a/veterinaria/menu/templates/menu/HTML/Contacto.html
+++ b/veterinaria/menu/templates/menu/HTML/Contacto.html
@@ -1,97 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTÁCTANOS</title>
-    <link type="text/css" rel="stylesheet" href="../css/estilo.css">
-    <link rel="stylesheet" href="../css/estilosCON.css">
-    <link rel="stylesheet" href="../css/estilosNO.css">
-    <link rel="stylesheet" href="../css/ESTILO2.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  {% load static %}
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CONTÁCTANOS</title>
+  <link type="text/css" rel="stylesheet" href="{% static 'menu./css/estilo.css' %}">
+  <link rel="stylesheet" href="{% static 'menu/css/estilosCON.css' %}">
+  <link rel="stylesheet" href="{% static 'menu/css/estilosNO.css' %}">
+  <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
+
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="circulo" href="Inicio.html"><IMG src="../img/LOGO.png" class="imagen"></IMG></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                     <a class="nav-link" href="Inicio.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#Contacto">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Login.html">Iniciar Sesión</a>
-              </li>
-            
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="circulo" href="Inicio.html"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="Inicio.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Contacto">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Login.html">Iniciar Sesión</a>
+          </li>
 
-               
-            </ul>
-            
-          </div>
-        </div>
-      </nav>
 
-      <div class="box">CONTACTO</div>
 
-    <div class="container">  
-      <form id="contact" action="#" >
-        <h3>Contacto</h3>
-        <h4>Estamos aca para responder cualquier consulta que tengas!</h4>
-        <fieldset>
-          <input placeholder="Nombre" type="text" tabindex="1" id="nombre_contacto"  autofocus>
-        </fieldset>
-        <fieldset>
-          <input placeholder="Correo eletronico" type="email" tabindex="2" id="correo_contacto" >
-        </fieldset>
-        <fieldset>
-          <input placeholder="Numero Telefonico" type="number" tabindex="3" id="nro_contacto"  >
-        </fieldset>
-        <fieldset>
-          <input placeholder="Nombre de Mascota" type="text" tabindex="1" id="nombre_m_contacto" autofocus>
-        </fieldset>
-        <fieldset>
-          <textarea placeholder="Ingresa tu mensaje aqui" tabindex="5" id="msg_contacto" ></textarea>
-        </fieldset>
-        <fieldset>
-          <button name="submit" type="submit" onclick='return enviarformulario_contacto();' values="enviar"  id="contact-submit" data-submit="...Sending">Enviar</button>
-          <div id="error"></div>
-        </fieldset>
-      </form>
-      <img src="../img/undraw_contact_us_re_4qqt (1).svg" alt="">     
-      
-    </div>
-    <footer>
-      <div class="contenedor-footer">
-          <div class="content-foo">
-              <h4>Phone</h4>
-              <p>+56 98296</p>
-          </div>
-          <div class="content-foo">
-              <h4>Email</h4>
-              <p>VetJuanita@gmail.com</p>
-          </div>
-          
-          </div>
+        </ul>
+
       </div>
-      <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
+    </div>
+  </nav>
+
+  <div class="box">CONTACTO</div>
+
+  <div class="container">
+    <form id="contact" action="#">
+      <h3>Contacto</h3>
+      <h4>Estamos aca para responder cualquier consulta que tengas!</h4>
+      <fieldset>
+        <input placeholder="Nombre" type="text" tabindex="1" id="nombre_contacto" autofocus>
+      </fieldset>
+      <fieldset>
+        <input placeholder="Correo eletronico" type="email" tabindex="2" id="correo_contacto">
+      </fieldset>
+      <fieldset>
+        <input placeholder="Numero Telefonico" type="number" tabindex="3" id="nro_contacto">
+      </fieldset>
+      <fieldset>
+        <input placeholder="Nombre de Mascota" type="text" tabindex="1" id="nombre_m_contacto" autofocus>
+      </fieldset>
+      <fieldset>
+        <textarea placeholder="Ingresa tu mensaje aqui" tabindex="5" id="msg_contacto"></textarea>
+      </fieldset>
+      <fieldset>
+        <button name="submit" type="submit" onclick='return enviarformulario_contacto();' values="enviar"
+          id="contact-submit" data-submit="...Sending">Enviar</button>
+        <div id="error"></div>
+      </fieldset>
+    </form>
+    <img src="{% static 'menu/img/undraw_contact_us_re_4qqt (1).svg' %}" alt="">
+
+  </div>
+  <footer>
+    <div class="contenedor-footer">
+      <div class="content-foo">
+        <h4>Phone</h4>
+        <p>+56 98296</p>
+      </div>
+      <div class="content-foo">
+        <h4>Email</h4>
+        <p>VetJuanita@gmail.com</p>
+      </div>
+
+    </div>
+    </div>
+    <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
   </footer>
   <script src="/PaginaCliente/veterinaria_juanita/HTML/JAVA/javaFormulario.js"></script>
 </body>
+
 </html>
