--- a/veterinaria/menu/templates/menu/HTML/AgendaOnline.html
+++ b/veterinaria/menu/templates/menu/HTML/AgendaOnline.html
@@ -34,22 +34,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="Inicio.html">Inicio</a>
+            <a class="nav-link" href="{%url 'Inicio' %}">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#AgendaOnline">Agenda Online</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contacto.html">Contacto</a>
+            <a class="nav-link" href="{%url 'Contacto' %}">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Nosotros.html">Nosotros</a>
+            <a class="nav-link" href="{%url 'Nosotros' %}">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Servicios.html">Servicios</a>
+            <a class="nav-link" href="{%url 'Servicios' %}">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Login.html">Iniciar sesión</a>
+            <a class="nav-link" href="{%url 'Login' %}">Iniciar sesión</a>
           </li>
 
         </ul>
