--- a/veterinaria/menu/templates/menu/HTML/Contacto.html
+++ b/veterinaria/menu/templates/menu/HTML/Contacto.html
@@ -21,7 +21,7 @@
     crossorigin="anonymous"></script>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="circulo" href="Inicio.html"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+      <a class="circulo" href="{%url 'Inicio' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,22 +29,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="Inicio.html">Inicio</a>
+            <a class="nav-link" href="{%url 'Inicio' %}">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
+            <a class="nav-link" href="{%url 'AgendaOnline' %}">Agenda Online</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Contacto">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Nosotros.html">Nosotros</a>
+            <a class="nav-link" href="{%url 'Nosotros' %}">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Servicios.html">Servicios</a>
+            <a class="nav-link" href="{%url 'Servicios' %}">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Login.html">Iniciar Sesión</a>
+            <a class="nav-link" href="{%url 'Login' %}">Iniciar Sesión</a>
           </li>
 
 
