--- a/veterinaria/menu/templates/menu/HTML/AgendaOnline.html
+++ b/veterinaria/menu/templates/menu/HTML/AgendaOnline.html
@@ -26,7 +26,7 @@
     crossorigin="anonymous"></script>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="circulo" href="Inicio.html"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+      <a class="circulo" href="{%url 'Inicio' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
             <a class="nav-link" href="{%url 'Inicio' %}">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#AgendaOnline">Agenda Online</a>
+            <a class="nav-link" href="{%url 'AgendaOnline' %}">Agenda Online</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{%url 'Contacto' %}">Contacto</a>
@@ -137,7 +137,7 @@
     </div>
     <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
   </footer>
-  <script src="/PaginaCliente/veterinaria_juanita/HTML/JAVA/javaFormulario.js"></script>
+  <script src="{% static 'menu/JAVA/javaFormulario.js' %}"></script>
 </body>
 
 </html>
