--- a/veterinaria/menu/templates/menu/HTML/Inicio.html
+++ b/veterinaria/menu/templates/menu/HTML/Inicio.html
@@ -21,29 +21,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="circulo" href="Inicio.html"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+          <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                     <a class="nav-link" href="#Inicio">Inicio</a>
+                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
+                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Contacto.html">Contacto</a>
+                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Nosotros.html">Nosotros</a>
+                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Servicios.html">Servicios</a>
+                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Login.html">Iniciar Sesión</a>
+                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
               </li>
             
             
@@ -65,7 +65,7 @@
     <h1>Agenda, tu hora para tu mascota </h1>
     <p>Brindamos una atención veterinaria, moderna, profesional para sus mascotas. Nuestro objetivo es hacer que su mascota se
     sienta a gusto en nuestras clínicas, con un enfoque atento y amable.</p>
-   <a href="../HTML/AgendaOnline.html"> <button class="custom-btn btn-3"><span>Agenda Online</span></button></a>
+   <a href="{% url 'AgendaOnline.html' %}"> <button class="custom-btn btn-3"><span>Agenda Online</span></button></a>
    </div>
   </div>
   
@@ -74,7 +74,7 @@
   <div class="carousel__content">
   <h1>Conoce Nuestros Servicios </h1>
   <p>Contamos con un equipo experto que cuidará la salud de tu mascota. Estamos preparados para atender a tu mascota.</p>
-  <a href="../HTML/Servicios.html"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
+  <a href="{% url 'Servicios.html' %}"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
  </div>
 </div>
 
@@ -82,7 +82,7 @@
   <div class="carousel__content">
   <h1>Visita  y Conoce más Sobre Nosotros </h1>
   <p>Encontrarás infomación sobre Nuestra experiencia</p>
-  <a href="../../../PaginaCliente/veterinaria_juanita/HTML/Nosotros.html"><button class="custom-btn btn-3"><span>Informate Aqui</span></button></a>
+  <a href="{% url 'Nosotros.html' %}"><button class="custom-btn btn-3"><span>Informate Aqui</span></button></a>
  </div>
  </div>
 
@@ -91,7 +91,7 @@
 
 </div>
 </section>
-<script src="JAVA/java.js"></script>
+<script src="{% static 'menu/JAVA/java.js' %}"></script>
 <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
 </body>
   
