--- a/veterinaria/menu/templates/menu/HTML/Login.html
+++ b/veterinaria/menu/templates/menu/HTML/Login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  {% load static %}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,8 @@
   <title>Inicia Sesión</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="../css/estilo.css">
-  <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
+  <link rel="stylesheet" href="{% static 'menu/css/login.css' %}">
 
 
 </head>
@@ -20,31 +20,32 @@
     crossorigin="anonymous"></script>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="circulo" href="Inicio.html"><IMG src="../img/LOGO.png" class="imagen"></IMG></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="Inicio.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Contacto.html">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Servicios.html">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Login">Iniciar Sesión</a>
-          </li>
+      <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
+              </li>
+            
+            
 
       </div>
     </div>
@@ -84,7 +85,7 @@
         <!--InicioSesion-->
         <input type="email" placeholder="Correo electrónico" id="correolog" />
         <input type="password" placeholder="Contraseña" id="contralog" />
-        <a href="../HTML/OlvidoContra.html">¿Se te olvidó tu contraseña?</a>
+        <a href="{% url 'OlvidoContra.html' %}">¿Se te olvidó tu contraseña?</a>
         <!--JavaScript-->
         <button type="submit" onclick='return enviaformlog();' values="enviar">Iniciar sesión</button>
         <div id="errorlog"></div>
@@ -107,8 +108,8 @@
     </div>
   </div>
   <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
-  <script src="JAVA/javaFormulario.js"></script>
-  <script src="JAVA/javaLogin.js"></script>
+  <script src="{% static 'menu/JAVA/javaFormulario.js' %}"></script>
+  <script src="{% static 'menu/JAVA/javaLogin.js' %}"></script>
 </body>
 
 </html>
