--- a/veterinaria/menu/templates/menu/HTML/Inicio.html
+++ b/veterinaria/menu/templates/menu/HTML/Inicio.html
@@ -1,4 +1,4 @@
-{{import Plantilla.html}}
+{% extends 'menu/HTML/Plantilla.html' %}
 
     {% load static %}
 
@@ -25,7 +25,7 @@
     <h1>Agenda, tu hora para tu mascota </h1>
     <p>Brindamos una atención veterinaria, moderna, profesional para sus mascotas. Nuestro objetivo es hacer que su mascota se
     sienta a gusto en nuestras clínicas, con un enfoque atento y amable.</p>
-   <a href="{% url 'AgendaOnline.html' %}"> <button class="custom-btn btn-3"><span>Agenda Online</span></button></a>
+   <a href="{% url 'AgendaOnline' %}"> <button class="custom-btn btn-3"><span>Agenda Online</span></button></a>
    </div>
   </div>
   
@@ -34,7 +34,7 @@
   <div class="carousel__content">
   <h1>Conoce Nuestros Servicios </h1>
   <p>Contamos con un equipo experto que cuidará la salud de tu mascota. Estamos preparados para atender a tu mascota.</p>
-  <a href="{% url 'Servicios.html' %}"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
+  <a href="{% url 'Servicios' %}"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
  </div>
 </div>
 
@@ -42,7 +42,7 @@
   <div class="carousel__content">
   <h1>Visita  y Conoce más Sobre Nosotros </h1>
   <p>Encontrarás infomación sobre Nuestra experiencia</p>
-  <a href="{% url 'Nosotros.html' %}"><button class="custom-btn btn-3"><span>Informate Aqui</span></button></a>
+  <a href="{% url 'Nosotros' %}"><button class="custom-btn btn-3"><span>Informate Aqui</span></button></a>
  </div>
  </div>
 
