--- a/veterinaria/menu/templates/menu/HTML/Plantilla.html
+++ b/veterinaria/menu/templates/menu/HTML/Plantilla.html
@@ -26,29 +26,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+          <a class="circulo" href="{% url 'Inicio' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
+                     <a class="nav-link" href="{% url 'Inicio' %}">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
+                <a class="nav-link" href="{% url 'AgendaOnline' %}">Agenda Online</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
+                <a class="nav-link" href="{% url 'Contacto' %}">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
+                <a class="nav-link" href="{% url 'Nosotros' %}">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
+                <a class="nav-link" href="{% url 'Servicios' %}">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
+                <a class="nav-link" href="{% url 'Login' %}">Iniciar Sesión</a>
               </li>
             
             
