--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Historial_Medico.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Historial_Medico.html
@@ -142,7 +142,7 @@
 
 
 
-  <script src="JAVA/tablaYbusquedad.js"></script>
+  <script src="{%static 'menu/JAVA/tablaYbusquedad.js%}"></script>
 </body>
 
 </html>
