--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Inicio.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Inicio.html
@@ -84,7 +84,7 @@
 </section>
 <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
 
-<script src="JAVA/java.js"></script>
+<script src="{%static 'menu/java_administrador/java.js' %}"></script>
 
 
     </body>
