--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Login.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Login.html
@@ -94,9 +94,9 @@
     </div>
   </div>
   <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
-  <script src="JAVA/javaLogin.js"></script>
-  <script src="JAVA/Login.js"></script>
-  <script src="JAVA/Registrar.js"></script>
+  <script src="{%static 'menu/java_administrador/javaLogin.js' %}"></script>
+  <script src="{%static 'menu/java_administrador/Login.js' %}"></script>
+  <script src="{%static 'menu/java_administrador/Registrar.js' % }"></script>
 </body>
 
 </html>
