--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
@@ -87,7 +87,7 @@
       <tbody>
         
 
-        <script src="/veterinaria_juanita/HTML/JAVA/javaFormulario.js"></script>
+        <script src="{%static 'menu/veterinaria_juanita/HTML/JAVA/javaFormulario.js' %}"></script>
         
 </body>
 </html>
