--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
@@ -1,57 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'menu/ADMINISTRADOR/Plantilla_adm.html' %}
 
-<head>
-  {%load static%}
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto con clientes</title>
-  <link type="text/css" rel="stylesheet" href="{%static 'menu/css/estilo.css' %}">
-  <link type="text/css" rel="stylesheet" href="{%static 'menu/css/estiloCONTACTOCLI.css' %}">
-  <link type="text/css" rel="stylesheet" href="{%static 'menu/css/ESTILO2.css' %}">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    {% load static %}
 
+    {% block titulo %}     
+      <title>Contacto con clientes</title>
+    {% endblock titulo %}
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
+    {% block estilos %}
+     <link type="text/css" rel="stylesheet" href="{%static 'menu/css_administrador/estiloCONTACTOCLI.css' %}">
+    {% endblock estilos %}
+    
+    
 
-<body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="circulo" href="{%url 'Inicio' %}"><IMG
-          src="{%static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Inicio' %}">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Registro_paciente' %}">Registro Paciente</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Historial_Medico' %}">Historial Médico</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Contacto_Clientes">Contacto con Clientes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Login' %}">Iniciar Sesión</a>
-          </li>
-
-        </ul>
-
-      </div>
-    </div>
-  </nav>
+      
+      {% block cuerpo %}
 
   <h2 class="box">Contacto con Clientes <img class="icono"
       src="https://images.vexels.com/media/users/3/154431/isolated/preview/1b0612bca0cd99911b17c88392db70ca-icono-de-contacto-de-soporte-al-cliente.png"
@@ -144,10 +106,6 @@
 
   </div>
 
-
-
-
-
-</body>
 <script src="{%static 'menu/java_administrador/javaFormulario.js' %}"></script>
-</html>
+
+{% endblock cuerpo %}
