--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Login_adm.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Login_adm.html
@@ -1,50 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'menu/ADMINISTRADOR/Plantilla_adm.html' %}
 
-<head>
-  {%load static%} 
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicia Sesión</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="../css/estilo.css">
-  <link rel="stylesheet" href="../css/login.css">
-  
-</head>
+    {% load static %}
 
-<body class="cuerpo">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="circulo" href="Inicio.html"><IMG src="../img/LOGO.png" class="imagen"></IMG></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-               <a class="nav-link" href="Inicio.html">Inicio</a>
-        </li>
-        
-        <li class="nav-item">
-          <a class="nav-link" href="Registro_paciente.html">Registro Paciente</a>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="Historial_Medico.html">Historial Médico</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="Contacto_Clientes.html">Contacto con Clientes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#Login">Iniciar Sesión</a>
-        </li>
-      </ul>
+    {% block titulo %}     
+    <title>Inicia Sesión</title>
+    {% endblock titulo %}
+
+    {% block estilos %}
+  <link rel="stylesheet" href="{%static 'menu/css_administrador/login.css' %}">
+    {% endblock estilos %}
+    
+    
+
+      
+      {% block cuerpo %}
 
 
-      </div>
-    </div>
-  </nav>
+
+
 
   <div class="container" id="container">
     <div class="form-container sign-up-container" id="form">
@@ -97,6 +70,3 @@
   <script src="{%static 'menu/java_administrador/javaLogin.js' %}"></script>
   <script src="{%static 'menu/java_administrador/Login.js' %}"></script>
   <script src="{%static 'menu/java_administrador/Registrar.js' % }"></script>
-</body>
-
-</html>
