--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
@@ -1,46 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  {%load static%}
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro Paciente</title>
-    <link type="text/css" rel="stylesheet" href="{%static 'menu/css/estilo.css' %}">
-    <link rel="stylesheet" href="{%static 'menu/css/estiloREGISTRO.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
-<body class="cuerpo">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="circulo" href="{%url 'Inicio' %}"><IMG src="{%static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                 <a class="nav-link" href="{%url 'Inicio' %}">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Registro_paciente">Registro Paciente</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Historial_Medico' %}">Historial Médico</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Contacto_Clientes' %}">Contacto con Clientes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Login' %}">Iniciar Sesión</a>
-          </li>
-           
-        </ul>
-        
-      </div>
-    </div>
-  </nav>
+{% extends 'menu/ADMINISTRADOR/Plantilla_adm.html' %}
+
+    {% load static %}
+
+    {% block titulo %}     
+     <title>Registro Paciente</title>
+    {% endblock titulo %}
+
+    {% block estilos %}
+  <link rel="stylesheet" href="{%static 'menu/css_administrador/estiloREGISTRO.css' %}">
+    {% endblock estilos %}
+    
+    
+
+      
+      {% block cuerpo %}
+
   <div class="box">Registra a tu Paciente </div>
   <div class="container">
     <table class="table table-fixed">
@@ -89,5 +63,4 @@
 
         <script src="{%static 'menu/veterinaria_juanita/HTML/JAVA/javaFormulario.js' %}"></script>
         
-</body>
-</html>
+{% endblock cuerpo %}
