--- a/veterinaria/menu/templates/menu/HTML/OlvidoContra.html
+++ b/veterinaria/menu/templates/menu/HTML/OlvidoContra.html
@@ -17,22 +17,23 @@
 
         <div class="container" id="container">
             <div class="form-container sign-up-container" id="form">
-                <form action="#" class="formulario" id="formulario">
-
+                <form action="#" class="formulario" id="formulario" method="POST" enctype="multipart/form-data">
+                    {% crsf_token %}
                     <div class="social-container">
 
                     </div>
 
 
-                    <input type="email" placeholder="Correo electrónico" />
-                    <input type="password" placeholder="Contraseña" />
-                    <input type="passwordNueva" placeholder="Contraseña" />
+                    <input type="email" placeholder="Correo electrónico" id="correoOlvida0"/>
+                    <input type="password" placeholder="Contraseña" id="contraseña0" />
+                    <input type="passwordNueva" placeholder="Contraseña" id="contranueva0" />
                   
                 </form>
             </div>
 
             <div class="form-container sign-in-container">
-                <form action="#">
+                <form action="olvidarContra1" enctype="multipart/form-data" method="POST">
+                    {% crsf_token %}
                     <h1>¿Olvidaste tu contraseña?</h1>
                     <div class="social-container">
 
