Agregue unos detalles faltantes

--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
@@ -25,6 +25,8 @@
         <tr>
           <th class="col-xs-1">Email</th>
           <th class="col-xs-1">Nombre</th>
+          <th class="col-xs-1">Nombre Mascota</th>
+          <th class="col-xs-1">Raza Mascota</th>
           <th class="col-xs-1">Teléfono</th>
           <th class="col-xs-1">Mensajes</th>
           <th class="col-xs-2">Escribe tu respuesta</th>
@@ -35,6 +37,8 @@
           <form action="">
           <td>example@gmail.com</td>
           <td >Juan Perez</td>
+          <td > Estrellita</td>
+          <td >Golden Retriever</td>
           <td >+56 9 4894 0670</td>
           <td>Mi perrito no come</td>
 
@@ -49,6 +53,8 @@
         <tr>
           <td>tupac@gmail.com</td>
           <td>Jeremías Gonzales</td>
+          <td > Estrellita</td>
+          <td >Golden Retriever</td>
           <td>+56 9 1109 4022</td>
           <td>No se baña el cochino</td>
 
@@ -63,6 +69,8 @@
         <tr>
           <td>Gatitoc@gmail.com</td>
           <td>Jose Panco</td>
+          <td > Estrellita</td>
+          <td >Golden Retriever</td>
           <td>+56 9 1249 4022</td>
           <td>Tiene vomitos :c</td>
 
@@ -78,6 +86,8 @@
         <tr>
           <td>mariasc@gmail.com</td>
           <td>Maria Pardo</td>
+          <td > Estrellita</td>
+          <td >Golden Retriever</td>
           <td>+56 9 1249 4022</td>
           <td>Se siente mal</td>
 
@@ -91,6 +101,8 @@
         <tr>
           <td>correoss@gmail.com</td>
           <td>Alejandro kenedy</td>
+          <td > Estrellita</td>
+          <td >Golden Retriever</td>
           <td>+56 9 1249 4021</td>
           <td>Tiene fiebre, ¿qué puedo darle?</td>
 
