--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Historial_Medico.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Historial_Medico.html
@@ -35,7 +35,7 @@
             <th>Enfermedades</th>
             <th>Diagnóstico</th>
             <th>Edad</th>
-            <th>Código de paciente</th>
+            <th>Código Chip</th>
           </tr>
           <tr>
             <td><img class="iman" src="{%static 'menu/img/batman.jpg' %}"></td>
