--- a/veterinaria/menu/templates/menu/HTML/Contacto.html
+++ b/veterinaria/menu/templates/menu/HTML/Contacto.html
@@ -75,6 +75,9 @@
         <input placeholder="Nombre de Mascota" type="text" tabindex="1" id="nombre_m_contacto" autofocus>
       </fieldset>
       <fieldset>
+        <input placeholder="Nombre de Mascota" type="text" tabindex="1" id="Raza_m_contacto" autofocus>
+      </fieldset>
+      <fieldset>
         <textarea placeholder="Ingresa tu mensaje aqui" tabindex="5" id="msg_contacto"></textarea>
       </fieldset>
       <fieldset>
