--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
@@ -22,6 +22,7 @@
       <thead>
         <tr>
           <th class="col-xs-3" id="nombre_mascota">Nombre Mascota</th>
+          <th class="col-xs-3" id="nombre_mascota">Raza Mascota</th>
           <th class="col-xs-3" id="nombre_dueño">Nombre Dueño</th>
           <th class="col-xs-6" id="enfermedades">Enfermedades</th>
           <th id="años_mascota">Años Mascota</th>
@@ -35,7 +36,11 @@
         <input class="form-control me-3"
       type="text" id="nombre_mascota1" placeholder="" aria-label="Search" >
              </form>
-
+             <td> 
+              <form action="#Inicio" class="d-flex1" role="text">
+                 <input class="form-control me-3" type="text" placeholder="" aria-label="Search" id="raza_mascota">
+               </form>
+            </td>
               <td> 
                 <form action="#Inicio" class="d-flex1" role="text">
                    <input class="form-control me-3" type="text" placeholder="" aria-label="Search" id="nombre_dueño1">
@@ -47,9 +52,12 @@
     
   </form>
 </td>
+
 <td>
   <form action="Inicio.html" class="d-flex3" role="text">
    <input class="form-control me-3" type="text" placeholder="" aria-label="Search" id="años_mascota1">
+
+
    
 <div class="editarboton"><button type="button"onclick='return enviarformulario_r();' values="enviar" class="btn btn-outline-primary">Guardar</button></div></div> 
 <div id="error"></div>
