--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
@@ -34,7 +34,7 @@
       </thead>
       <tbody>
         <tr>
-          <form action="">
+          <form action="" method="POST" enctype="multipart/form-data">
           <td>example@gmail.com</td>
           <td >Juan Perez</td>
           <td > Estrellita</td>
@@ -49,7 +49,7 @@
         <div id="error"></div>
       </form>
 
-      <form action="">
+      <form action="" >
         <tr>
           <td>tupac@gmail.com</td>
           <td>Jeremías Gonzales</td>
