--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Registro_paciente.html
@@ -18,7 +18,7 @@
   <div class="box">Registra a tu Paciente </div>
   <div class="container">
     <table class="table table-fixed">
-      <form action="#">
+      <form action="#" method="POST" enctype="multipart/form-data" >
       <thead>
         <tr>
           <th class="col-xs-3" id="nombre_mascota">Nombre Mascota</th>
@@ -32,29 +32,29 @@
      
       </thead>
       
-     <td> <form action="#Inicio" class="d-flex" role="text">
+     <td> <form action="#Inicio" class="d-flex" role="text"  method="POST" enctype="multipart/form-data" >
         <input class="form-control me-3"
       type="text" id="nombre_mascota1" placeholder="" aria-label="Search" >
              </form>
              <td> 
-              <form action="#Inicio" class="d-flex1" role="text">
+              <form action="#Inicio" class="d-flex1" role="text" method="POST" enctype="multipart/form-data" >
                  <input class="form-control me-3" type="text" placeholder="" aria-label="Search" id="raza_mascota">
                </form>
             </td>
               <td> 
-                <form action="#Inicio" class="d-flex1" role="text">
+                <form action="#Inicio" class="d-flex1" role="text" method="POST" enctype="multipart/form-data" >
                    <input class="form-control me-3" type="text" placeholder="" aria-label="Search" id="nombre_dueño1">
                  </form>
               </td>
 <td>
-  <form action="#Inicio" class="d-flex2" role="text">
+  <form action="#Inicio" class="d-flex2" role="text" method="POST" enctype="multipart/form-data" >
      <input class="form-control me-3" type="number" placeholder="" aria-label="Search" id="enfermedades1">
     
   </form>
 </td>
 
 <td>
-  <form action="Inicio.html" class="d-flex3" role="text">
+  <form action="Inicio.html" class="d-flex3" role="text" method="POST" enctype="multipart/form-data" >
    <input class="form-control me-3" type="text" placeholder="" aria-label="Search" id="años_mascota1">
 
 
