--- a/veterinaria/menu/templates/menu/HTML/Login.html
+++ b/veterinaria/menu/templates/menu/HTML/Login.html
@@ -43,7 +43,7 @@
     </div>
 <!--VALIDACION JS INICIAR SESION-->
     <div class="form-container sign-in-container">
-      <form action="#">
+      <form action="#" method="POST" enctype="multipart/form-data">
         <h1>Iniciar sesión</h1>
         <div class="social-container">
 
