--- a/veterinaria/menu/templates/menu/HTML/Servicios.html
+++ b/veterinaria/menu/templates/menu/HTML/Servicios.html
@@ -92,7 +92,7 @@
       </table>
       </div>
     </center>
-    <center> <a href="../HTML/AgendaOnline"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="{% url 'AgendaOnline' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
