--- a/veterinaria/menu/templates/menu/HTML/AgendaOnline.html
+++ b/veterinaria/menu/templates/menu/HTML/AgendaOnline.html
@@ -1,63 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-<head>
-  
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
-  <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
 
-  <link rel="stylesheet" href="{% static 'menu/css/AgendaOnline.css' %}">
+{% extends 'menu/HTML/Plantilla.html' %}
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    {% block titulo %}     
   <title>Agenda Online</title>
+    {% endblock titulo %}
 
+    {% block estilos %}
+  <link rel="stylesheet" href="{% static 'menu/css/AgendaOnline.css' %}">
+    {% endblock estilos %}
+    
+    
 
-
-
-</head>
-
-<body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="circulo" href="{%url 'Inicio' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Inicio' %}">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'AgendaOnline' %}">Agenda Online</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Contacto' %}">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Nosotros' %}">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Servicios' %}">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'Login' %}">Iniciar sesión</a>
-          </li>
-
-        </ul>
-
-      </div>
-    </div>
-  </nav>
+      
+      {% block cuerpo %}
   <div class='container'>
 
     <header>
@@ -164,6 +121,4 @@
 
   
   <script src="{% static 'menu/JAVA/javaFormulario.js' %}"></script>
-</body>
-
-</html>
+  {% endblock cuerpo %}
