--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/RevisarCitas.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/RevisarCitas.html
@@ -10,7 +10,18 @@
   <link rel="stylesheet" href="{%static 'menu/css_administrador/estiloREGISTRO.css' %}">
     {% endblock estilos %}
     
-    
+  
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        {%for i in Reserva%}
+
+
+        {%endfor%}
+      </div>
+    </div>
+
+
+
 
       
       {% block cuerpo %}
