--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Contacto_Clientes.html
@@ -18,105 +18,77 @@
   <h2 class="box">Contacto con Clientes <img class="icono"
       src="https://images.vexels.com/media/users/3/154431/isolated/preview/1b0612bca0cd99911b17c88392db70ca-icono-de-contacto-de-soporte-al-cliente.png"
      ></h2>
-  <div class="container">
-    <table class="table table-fixed">
-      <div class="row">
-      <thead>
-        <tr>
-          <th class="col-xs-1">Email</th>
-          <th class="col-xs-1">Nombre</th>
-          <th class="col-xs-1">Nombre Mascota</th>
-          <th class="col-xs-1">Raza Mascota</th>
-          <th class="col-xs-1">Teléfono</th>
-          <th class="col-xs-1">Mensajes</th>
-          <th class="col-xs-2">Escribe tu respuesta</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <form action="" method="POST" enctype="multipart/form-data">
-          <td>example@gmail.com</td>
-          <td >Juan Perez</td>
-          <td > Estrellita</td>
-          <td >Golden Retriever</td>
-          <td >+56 9 4894 0670</td>
-          <td>Mi perrito no come</td>
+     {% for m in Contacto_Clientes %}
+     <form action="" method="POST" enctype="multipart/form-data">
+     <td>{{m.correoContacto}}</td>
+     <td > {{m.NombreContacto}}  </td>
+     <td > {{m.nombreMascota}}</td>
+     <td > {{m.TelefonoContacto}}</td>
+     <td>{{m.mensajeContacto}}</td>
 
-          <td><input type="text" id="r" name="respuesta" size="20"> <button type="submit"  class="btn btn-outline-info" 
-            onclick='return enviarformulario_contacto_con_cliente();'
-              submit >Enviar</button> </td>
-        </tr>
-        <div id="error"></div>
-      </form>
+     <td><input type="text" id="r" name="respuesta" size="20"> <button type="submit"  class="btn btn-outline-info" 
+       onclick='return enviarformulario_contacto_con_cliente();'
+         submit >Enviar</button> </td>
+   </tr>
+   <div id="error"></div>
+ </form>
 
-      <form action="" >
-        <tr>
-          <td>tupac@gmail.com</td>
-          <td>Jeremías Gonzales</td>
-          <td > Estrellita</td>
-          <td >Golden Retriever</td>
-          <td>+56 9 1109 4022</td>
-          <td>No se baña el cochino</td>
+ <form action="" >
+   <tr>
+     <td>{{m.correoContacto}}</td>
+     <td>{{m.NombreContacto}}</td>
+     <td > {{m.nombreMascota}}</td>
+     <td>{{m.TelefonoContacto}}</td>
+     <td>{{m.mensajeContacto}}</td>
 
-          <td><input type="text" id="r1" name="respuesta" size="20"> <button type="submit" class="btn btn-outline-info"
-            onclick='return enviarformulario_contacto_con_cliente1();'
-              submit>Enviar</button> </td>
-        </tr>
-        <div id="error"></div>
-      </form>
+     <td><input type="text" id="r1" name="respuesta" size="20"> <button type="submit" class="btn btn-outline-info"
+       onclick='return enviarformulario_contacto_con_cliente1();'
+         submit>Enviar</button> </td>
+   </tr>
+   <div id="error"></div>
+ </form>
 
-      <form action="">
-        <tr>
-          <td>Gatitoc@gmail.com</td>
-          <td>Jose Panco</td>
-          <td > Estrellita</td>
-          <td >Golden Retriever</td>
-          <td>+56 9 1249 4022</td>
-          <td>Tiene vomitos :c</td>
+ <form action="">
+   <tr>
+     <td>{{m.correoContacto}}</td>
+     <td>{{m.NombreContacto}}</td>
+     <td >{{m.nombreMascota}}</td>
+     <td>{{m.TelefonoContacto}}</td>
+     <td>{{m.mensajeContacto}}</td>
 
-          <td><input type="text" name="respuesta" size="20" id="r2"> <button type="submit" class="btn btn-outline-info"
-            onclick='return enviarformulario_contacto_con_cliente2();' >Enviar</button> submit>Enviar</button> </td>
-        </tr>
-        <div id="error"></div>
-      </form>
+     <td><input type="text" name="respuesta" size="20" id="r2"> <button type="submit" class="btn btn-outline-info"
+       onclick='return enviarformulario_contacto_con_cliente2();' >Enviar</button> submit>Enviar</button> </td>
+   </tr>
+   <div id="error"></div>
+ </form>
 
-      <form action="">
+ <form action="">
 
 
-        <tr>
-          <td>mariasc@gmail.com</td>
-          <td>Maria Pardo</td>
-          <td > Estrellita</td>
-          <td >Golden Retriever</td>
-          <td>+56 9 1249 4022</td>
-          <td>Se siente mal</td>
+   <tr>
+     <td>{{m.correoContacto}}</td>
+     <td>{{m.NombreContacto}}</td>
+     <td > {{m.nombreMascota}}</td>
+     <td>{{m.TelefonoContacto}}</td>
+     <td>{{m.mensajeContacto}}</td>
 
-          <td><input type="text" name="respuesta" size="20" id="r3"> <button type="submit" class="btn btn-outline-info"
-            onclick='return enviarformulario_contacto_con_cliente3();' submit>Enviar</button> </td>
-        </tr>
-        <div id="error"></div>
-      </form>
+     <td><input type="text" name="respuesta" size="20" id="r3"> <button type="submit" class="btn btn-outline-info"
+       onclick='return enviarformulario_contacto_con_cliente3();' submit>Enviar</button> </td>
+   </tr>
+   <div id="error"></div>
+ </form>
 
-      <form action="">
-        <tr>
-          <td>correoss@gmail.com</td>
-          <td>Alejandro kenedy</td>
-          <td > Estrellita</td>
-          <td >Golden Retriever</td>
-          <td>+56 9 1249 4021</td>
-          <td>Tiene fiebre, ¿qué puedo darle?</td>
+ <form action="">
+   <tr>
+     <td>{{m.correoContacto}}</td>
+     <td>{{m.NombreContacto}}</td>
+     <td > {{m.nombreMascota}}</td>
+     <td>{{m.TelefonoContacto}}</td>
+     <td>{{m.mensajeContacto}}</td>
 
-          <td><input type="text" name="respuesta" size="20" id="r4"> <button type="submit" class="btn btn-outline-info"
-            onclick='return enviarformulario_contacto_con_cliente4();' submit>Enviar</button> </td>
-        </tr>
-        <div id="error"></div>
-      </form>
-
-      </div>
-      </tbody>
-    </table>
-
-  </div>
+     <td><input type="text" name="respuesta" size="20" id="r4"> <button type="submit" class="btn btn-outline-info"
+       onclick='return enviarformulario_contacto_con_cliente4();' submit>Enviar</button> </td>
+       {% endfor %}
 
 <script src="{%static 'menu/java_administrador/javaFormulario.js' %}"></script>
 
